--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ highlighter: rouge
 # so be sure to set them if your theme uses them.
 #
 title : MegaApuTurkUltra
-tagline: Insert some cool tagline here
+tagline: Running a cool blog since yesterday!
 author :
   name : MegaApuTurkUltra
   email : apu@aputurk.tk
